[package]
name = "stylance-macros"
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal crate used by stylance"

[lib]
proc-macro = true

[features]
nightly = []

[dependencies]
stylance-core = { workspace = true }
anyhow = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits"] }
